Add social meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>ahora-gobierno</title>
+    <title>¿Ahora, gobierno?</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:500,800&display=swap" rel="stylesheet">
+    <meta property="fb:app_id" content="252515324782640" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="¿Ahora, gobierno?" />
+    <meta property="og:locale" content="ca_ES" />
+    <meta property="og:title" content="¿Ahora, gobierno?" />
+    <meta property="og:url" content="https://ahoragobierno.es" />
+    <meta property="og:image" content="https://ahoragobierno.es/img/thumbnail.jpg" />
+    <meta property="og:description" content="¿Ahora, gobierno? ¿Y en los últimos 4 meses, por qué no?" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="¿Ahora, gobierno?" />
+    <meta property="twitter:description" content="¿Ahora, gobierno? ¿Y en los últimos 4 meses, por qué no?" />
+    <meta property="twitter:image" content="https://ahoragobierno.es/img/thumbnail.jpg" />
+    <meta property="twitter:url" content="https://ahoragobierno.es" />
+    <meta name="twitter:site" content="@compromis">
   </head>
   <body>
     <noscript>
